--- a/index.html
+++ b/index.html
@@ -9,5 +9,177 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- <script>
+      (function () {
+        if (!window.chatbase || window.chatbase("getState") !== "initialized") {
+          window.chatbase = (...arguments) => {
+            if (!window.chatbase.q) {
+              window.chatbase.q = [];
+            }
+            window.chatbase.q.push(arguments);
+          };
+          window.chatbase = new Proxy(window.chatbase, {
+            get(target, prop) {
+              if (prop === "q") {
+                return target.q;
+              }
+              return (...args) => target(prop, ...args);
+            },
+          });
+        }
+        const onLoad = function () {
+          const script = document.createElement("script");
+          script.src = "https://www.chatbase.co/embed.min.js";
+          script.id = "s6cEfPDvx7EGE1aEQpDA4";
+          script.domain = "www.chatbase.co";
+          document.body.appendChild(script);
+        };
+        if (document.readyState === "complete") {
+          onLoad();
+        } else {
+          window.addEventListener("load", onLoad);
+        }
+      })();
+    </script> -->
+    <!-- Chatbase Script -->
+    <script>
+      (function () {
+        if (!window.chatbase || window.chatbase("getState") !== "initialized") {
+          window.chatbase = (...arguments) => {
+            if (!window.chatbase.q) {
+              window.chatbase.q = [];
+            }
+            window.chatbase.q.push(arguments);
+          };
+          window.chatbase = new Proxy(window.chatbase, {
+            get(target, prop) {
+              if (prop === "q") {
+                return target.q;
+              }
+              return (...args) => target(prop, ...args);
+            },
+          });
+        }
+        const onLoad = function () {
+          const script = document.createElement("script");
+          script.src = "https://www.chatbase.co/embed.min.js";
+          script.id = "s6cEfPDvx7EGE1aEQpDA4";
+          script.domain = "www.chatbase.co";
+          document.body.appendChild(script);
+        };
+        if (document.readyState === "complete") {
+          onLoad();
+        } else {
+          window.addEventListener("load", onLoad);
+        }
+      })();
+    </script>
+
+    <!-- MercBot Fixed Button -->
+    <button class="mercbot-gentle" onclick="window.chatbase('open')">
+      <div class="breath-glow"></div>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="18"
+        height="18"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path
+          d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
+        />
+      </svg>
+      <span>MercBot</span>
+    </button>
+
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@600&display=swap");
+
+      .mercbot-gentle {
+        position: fixed;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 9999;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+        padding: 22px 10px;
+
+        /* Soft Glassmorphism */
+        background: linear-gradient(180deg, #4fb0b0ee 0%, #1e40afee 100%);
+        backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px);
+
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        border-left: none;
+        border-radius: 0 16px 16px 0;
+
+        color: white;
+        cursor: pointer;
+        box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.1);
+        transition: all 0.5s ease;
+      }
+
+      .mercbot-gentle span {
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+        transform: rotate(180deg);
+        font-family: "Plus Jakarta Sans", sans-serif;
+        font-size: 11px;
+        font-weight: 600;
+        letter-spacing: 0.15em;
+        text-transform: uppercase;
+        opacity: 0.8;
+      }
+
+      /* --- GENTLE BREATHING SYSTEM --- */
+      .breath-glow {
+        position: absolute;
+        inset: 0;
+        border-radius: 0 16px 16px 0;
+        background: #4fb0b0;
+        z-index: -1;
+        filter: blur(0px);
+        opacity: 0;
+        animation: gentle-breath 4s ease-in-out infinite;
+      }
+
+      @keyframes gentle-breath {
+        0%,
+        100% {
+          transform: scale(1);
+          opacity: 0;
+          filter: blur(0px);
+        }
+        50% {
+          transform: scaleX(1.4) scaleY(1.1);
+          opacity: 0.3;
+          filter: blur(12px); /* Creates a soft cloud effect */
+        }
+      }
+
+      /* Hover State: Calms the animation and adds focus */
+      .mercbot-gentle:hover {
+        padding-left: 16px;
+        background: linear-gradient(180deg, #4fb0b0 0%, #1e40af 100%);
+        box-shadow: 4px 0 20px rgba(79, 176, 176, 0.3);
+      }
+
+      .mercbot-gentle:hover span {
+        opacity: 1;
+      }
+
+      #chatbase-bubble-button {
+        display: none !important;
+      }
+    </style>
   </body>
 </html>
